# dashboard

./: .gitignore  README.md  environment-min.yml  environment.yml  pyproject.toml  requirements.txt  run.py  wsgi.py
dashboard/: __init__.py
dashboard/users/: __init__.py
deployment/: dashboard.ini  dashboard.nginx  dashboard.service
tests/: __init__.py  requirements.txt  test_auth_user.py  test_email.py  test_embargo.py  test_ldap.py  test_ldap_directory.py  test_ldap_user.py  test_mailout.py  test_soh.py  test_token_uid.py  test_upload_stats.py
webapp/: __init__.py  config.py  config.py.template  db.py  mailout.py  mimemail.py  properties.py.template  static
webapp/auth/: __init__.py  forms.py  ldap.py  ldap_directory.py  ldap_user.py  mailout.py  token_uid.py  user.py  views.py
webapp/auth/templates/: change_password.html  create_ldap_user.html  delete_ldap_user.html  list_ldap_users.html  login.html  modify_ldap_user.html  modify_ldap_user_init.html  password_changed.html  password_reset.html  reset_ldap_password.html  reset_password_init.html  user_created.html  user_deleted.html  user_modified.html  welcome_user.html
webapp/health/: health_check.py  views.py
webapp/home/: views.py
webapp/pasta/: embargo.py  forms.py  views.py
webapp/reports/: __init__.py  forms.py  offline_data.json  package_tracker.py  public_no_access.json  render_report.py  site_report_stats.py  upload_report_stats.py  upload_stats.py  views.py
webapp/reservations/: views.py
webapp/state_of_health/: __init__.py  status_level_2.py
webapp/users/: views.py
(+24 files in other folders)
