[project]
authors = [
    {name = "Mark Servilla", email = "mark.servilla@gmail.com"},
    {name = "James Brunt", email = "jbrunt@unm.edu"}
]
dependencies = []
name = "dashboard"
requires-python = ">= 3.11"
version = "2026.03.15"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
soh = { path = "../soh", editable = true }
sniffer = { path = "../sniffer", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
psycopg2-binary = ">=2.9.10,<3"
psycopg2 = ">=2.9.10,<3"
sqlalchemy = "<2.0"
pillow = ">=12.1.1,<13"
cryptography = ">=46.0.5,<47"
werkzeug = ">=3.1.6,<4"
flask = ">=3.1.3,<4"
urllib3 = ">=2.6.3,<3"
pendulum = ">=3.2.0,<4"
flask-wtf = ">=1.2.2,<2"
pytest = ">=9.0.2,<10"
daiquiri = ">=3.0.0,<4"
flask-bootstrap = ">=3.3.7.1,<4"
uwsgi = ">=2.0.31,<3"
matplotlib = ">=3.10.8,<4"
requests = ">=2.32.5,<3"
ldap3 = ">=2.9.1,<3"
email_validator = ">=2.3.0,<3"
pynacl = ">=1.6.2,<2"
flask-login = ">=0.6.3,<0.7"
lxml = ">=6.0.2,<7"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
